Fix slightly distorted logo

--- a/server/pages/static/css/main.css
+++ b/server/pages/static/css/main.css
@@ -18,7 +18,6 @@ body {
 
 .image {
 	width: 200px;
-	height: 200px;
 	padding-bottom: 3em;
 }
 
